--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,7 +8,7 @@
 @import "card-investment";
 @import "banner";
 @import "slider";
-@import "sidemenu";
+@import "side-menu";
 @import "charts";
 @import "card-risk";
 @import "mapbox";
