--- a/app/views/investments/map.html.erb
+++ b/app/views/investments/map.html.erb
@@ -1,28 +1,19 @@
-<div class="d-flex" id="wrapper">
-  <!-- Sidebar -->
-  <div class="bg-light border-right" id="sidebar-wrapper">
-    <div class="sidebar-heading"><%= current_user.last_name%> <%= current_user.first_name%> </div>
-    <div class="list-group list-group-flush">
-      <a href="/myinvestments/dashboard" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-      <a href="/myinvestments" class="list-group-item list-group-item-action bg-light">Investments</a>
-      <a href="/myinvestments/myrewards" class="list-group-item list-group-item-action bg-light">Rewards</a>
-      <a href="/myinvestments/mymap" style="background-color: lightgrey; font-weight: bold!important;" class="list-group-item list-group-item-action">Map</a>
+<div class="container-fluid p-0">
+  <div class="row">
+
+
+    <div class="col-md-2 col-lg-2 p-0">
+      <%= render '/shared/investor_dashboard_sidebar' %>
+    </div>
+
+    <div class="col-md-10 col-lg-10 p-0">
+
+     <h3> Your funded places map: </h3>
+     <div class="d-flex justify-content-center my-5">
+      <div id="mapbox" class="rounded" style="width: 100%; height: 60vh;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
 
     </div>
+
+
   </div>
-
-
-<div class="container mt-4">
-   <h3> Your funded places map: </h3>
-    <div class="d-flex justify-content-center my-5">
-    <div id="mapbox" class="rounded" style="width: 100%; height: 60vh;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
-  </div>
-</div>
-
-
-</div>
-
-
-
-
 </div>
