--- a/app/views/investments/myinvestments.html.erb
+++ b/app/views/investments/myinvestments.html.erb
@@ -1,32 +1,27 @@
-<div class="d-flex" id="wrapper">
-  <!-- Sidebar -->
-  <div class="bg-light border-right" id="sidebar-wrapper">
-    <div class="sidebar-heading"><%= current_user.last_name%> <%= current_user.first_name%> </div>
-    <div class="list-group list-group-flush">
-      <a href="/myinvestments/dashboard"  class="list-group-item list-group-item-action">Dashboard</a>
-      <a href="/myinvestments" style="background-color: lightgrey; font-weight: bold!important;" class="list-group-item list-group-item-action bg-light">Investments</a>
-      <a href="/myinvestments/myrewards" class="list-group-item list-group-item-action bg-light">Rewards</a>
-      <a href="/myinvestments/mymap" class="list-group-item list-group-item-action bg-light">Map</a>
+<div class="container-fluid p-0">
+  <div class="row">
+
+
+    <div class="col-md-3 p-0">
+      <%= render '/shared/investor_dashboard_sidebar' %>
     </div>
-  </div>
 
-  <div class="container">
+    <div class="col-md-9 p-0">
 
-<!-- # Tabs -->
-  <ul class="nav nav-tabs" id="myTab" role="tablist">
-  <li class="nav-item">
-    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Active Investments</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false"> Waiting for Launch </a>
-  </li>
-
-</ul>
-<div class="tab-content" id="myTabContent">
+      <!-- # Tabs -->
+      <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Active Investments</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false"> Waiting for Launch </a>
+        </li>
+      </ul>
+      <div class="tab-content" id="myTabContent">
 
 
-  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-    <!-- # insert prod card -->
+        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+          <!-- # insert prod card -->
 
           <div class="row">
             <% @closed.each do |investment| %>
@@ -46,52 +41,48 @@
                 <!-- <h5>10 days left</h5> -->
                 <% days_left = ((investment.campaign.expiry_date - Time.now)/86400).round(0) %>
                 <% if days_left >= 0 %>
-                  <h5><%= ((investment.campaign.expiry_date - Time.now)/86400).round(0)%> days left</h5>
+                <h5><%= ((investment.campaign.expiry_date - Time.now)/86400).round(0)%> days left</h5>
                 <% else %>
-                  <h5> Investment Closed </h5>
+                <h5> Investment Closed </h5>
                 <% end %>
-      <!--         <h1><%#= investment.campaign.company.name %></h1>
-      -->
-      <!-- Calculations -->
+                <!--         <h1><%#= investment.campaign.company.name %></h1>
+                -->
+                <!-- Calculations -->
 
-          <% raised = Investment.where(campaign_id: investment.campaign.id).sum("amount") %>
-          <% target = investment.campaign.min_target %>
-          <% status = ((raised.to_f/target)*100).round(1) %>
+                <% raised = Investment.where(campaign_id: investment.campaign.id).sum("amount") %>
+                <% target = investment.campaign.min_target %>
+                <% status = ((raised.to_f/target)*100).round(1) %>
 
-      <div class="box-align" >
-        <h4>Campaign Overview</h4>
-        <ul class="patient-item">
-          <li ><p style="font-size: 16px";>Campaign target: $ <%= number_with_delimiter(investment.campaign.min_target, :delimiter => ',') %></p> </li>
-          <li><p style="font-size: 16px";> Funding Status: <%= status %> % ($ <%= raised %>)</p></li>
-          <li><p style="font-size: 16px";> #Investors:  <%= Investment.where(campaign_id: investment.campaign.id).count %></p> </li>
-          <li><p style="font-size: 16px";>Avge Inv Rate <%= (investment.campaign.return_rate*100).round(1)  %> %</p> </li>
-          <li><p style="font-size: 16px";>Exp.Date <%= (investment.campaign.expiry_date)&.strftime("%m/%d/%Y")  %> </p> </li>
-        </ul>
+                <div class="box-align" >
+                  <h4>Campaign Overview</h4>
+                  <ul class="patient-item">
+                    <li ><p style="font-size: 16px";>Campaign target: $ <%= number_with_delimiter(investment.campaign.min_target, :delimiter => ',') %></p> </li>
+                    <li><p style="font-size: 16px";> Funding Status: <%= status %> % ($ <%= raised %>)</p></li>
+                    <li><p style="font-size: 16px";> #Investors:  <%= Investment.where(campaign_id: investment.campaign.id).count %></p> </li>
+                    <li><p style="font-size: 16px";>Avge Inv Rate <%= (investment.campaign.return_rate*100).round(1)  %> %</p> </li>
+                    <li><p style="font-size: 16px";>Exp.Date <%= (investment.campaign.expiry_date)&.strftime("%m/%d/%Y")  %> </p> </li>
+                  </ul>
 
-        <br>
+                  <br>
 
-        <h4>Your Investment </h4>
-        <ul class="patient-item">
-          <li><p style="font-size: 16px";>Your current investment: $ <%= investment.amount %> </p></li>
-          <% if investment.payment_date.nil? %>
-          <li><p style="font-size: 16px";> Payment date: Pending </p></li>
-          <% else %>
-          <li><p style="font-size: 16px";> Payment date: <%= investment.payment_date&.strftime("%m/%d/%Y") %></p></li>
-          <% end %>
-        </ul>
-      </div>
-      </div>
-      </div>
+                  <h4>Your Investment </h4>
+                  <ul class="patient-item">
+                    <li><p style="font-size: 16px";>Your current investment: $ <%= investment.amount %> </p></li>
+                    <% if investment.payment_date.nil? %>
+                    <li><p style="font-size: 16px";> Payment date: Pending </p></li>
+                    <% else %>
+                    <li><p style="font-size: 16px";> Payment date: <%= investment.payment_date&.strftime("%m/%d/%Y") %></p></li>
+                    <% end %>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <% end %>
+          </div>
+        </div>
 
-      <% end %>
-
-      </div>
-
-  </div>
-
-
-  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-    <!-- # insert prod card -->
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+          <!-- # insert prod card -->
           <div class="row">
             <% @open.each do |investment| %>
             <%#= link_to investment.campaign_path(campaign), class: "wrapper-link" do %>
@@ -110,52 +101,51 @@
                 <!-- <h5>10 days left</h5> -->
                 <% days_left = ((investment.campaign.expiry_date - Time.now)/86400).round(0) %>
                 <% if days_left >= 0 %>
-                  <h5><%= ((investment.campaign.expiry_date - Time.now)/86400).round(0)%> days left</h5>
+                <h5><%= ((investment.campaign.expiry_date - Time.now)/86400).round(0)%> days left</h5>
                 <% else %>
-                  <h5> Investment Closed </h5>
+                <h5> Investment Closed </h5>
                 <% end %>
-      <!--         <h1><%#= investment.campaign.company.name %></h1>
-      -->
-      <!-- Calculations -->
+            <!--         <h1><%#= investment.campaign.company.name %></h1>
+            -->
+            <!-- Calculations -->
 
-          <% raised = Investment.where(campaign_id: investment.campaign.id).sum("amount") %>
-          <% target = investment.campaign.min_target %>
-          <% status = ((raised.to_f/target)*100).round(1) %>
+            <% raised = Investment.where(campaign_id: investment.campaign.id).sum("amount") %>
+            <% target = investment.campaign.min_target %>
+            <% status = ((raised.to_f/target)*100).round(1) %>
 
-      <div class="box-align" >
-        <h4>Campaign Overview</h4>
-        <ul class="patient-item">
-          <li ><p style="font-size: 16px";>Campaign target: $ <%= number_with_delimiter(investment.campaign.min_target, :delimiter => ',') %></p> </li>
-          <li><p style="font-size: 16px";> Funding Status: <%= status %> % ($ <%= raised %>)</p></li>
-          <li><p style="font-size: 16px";> #Investors:  <%= Investment.where(campaign_id: investment.campaign.id).count %></p> </li>
-          <li><p style="font-size: 16px";>Avge Inv Rate <%= (investment.campaign.return_rate*100).round(1)  %> %</p> </li>
-          <li><p style="font-size: 16px";>Exp.Date <%= (investment.campaign.expiry_date)&.strftime("%m/%d/%Y")  %> </p> </li>
-        </ul>
+            <div class="box-align" >
+              <h4>Campaign Overview</h4>
+              <ul class="patient-item">
+                <li ><p style="font-size: 16px";>Campaign target: $ <%= number_with_delimiter(investment.campaign.min_target, :delimiter => ',') %></p> </li>
+                <li><p style="font-size: 16px";> Funding Status: <%= status %> % ($ <%= raised %>)</p></li>
+                <li><p style="font-size: 16px";> #Investors:  <%= Investment.where(campaign_id: investment.campaign.id).count %></p> </li>
+                <li><p style="font-size: 16px";>Avge Inv Rate <%= (investment.campaign.return_rate*100).round(1)  %> %</p> </li>
+                <li><p style="font-size: 16px";>Exp.Date <%= (investment.campaign.expiry_date)&.strftime("%m/%d/%Y")  %> </p> </li>
+              </ul>
 
-        <br>
+              <br>
 
-        <h4>Your Investment </h4>
-        <ul class="patient-item">
-          <li><p style="font-size: 16px";>Your current investment: $ <%= investment.amount %> </p></li>
-          <% if investment.payment_date.nil? %>
-          <li><p style="font-size: 16px";> Payment date: Pending </p></li>
-          <% else %>
-          <li><p style="font-size: 16px";> Payment date: <%= investment.payment_date&.strftime("%m/%d/%Y") %></p></li>
-          <% end %>
-        </ul>
+              <h4>Your Investment </h4>
+              <ul class="patient-item">
+                <li><p style="font-size: 16px";>Your current investment: $ <%= investment.amount %> </p></li>
+                <% if investment.payment_date.nil? %>
+                <li><p style="font-size: 16px";> Payment date: Pending </p></li>
+                <% else %>
+                <li><p style="font-size: 16px";> Payment date: <%= investment.payment_date&.strftime("%m/%d/%Y") %></p></li>
+                <% end %>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <% end %>
+
       </div>
-      </div>
-      </div>
+    </div>
 
-      <% end %>
-
-      </div>
 
   </div>
-
 </div>
-
-  <!-- tabs end -->
 
 </div>
 </div>
