--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -61,7 +61,7 @@
         </div>
         <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
         </div>
-        <div class="text-center>
+        <div class="text-center">
           <h4><%= Investment.where(campaign_id: campaign.id).count%></h4>
           <p>investors</p>
         </div>
@@ -73,14 +73,12 @@
   <!-- # investment card closing div -->
 </div>
 
-  <% end %>
-  <% end %>
-</div>
+
 
 <div class="d-flex justify-content-center">
   <h5 class="mt-5"><%= link_to "SHOW MORE", "/campaigns", class: "btn btn-secondary" %></h5>
 </div>
-  
+
 <!-- horizontal line -->
 <div class=" w-90 my-4 mx-auto" style="border: 1px solid lightgrey">
 </div>
@@ -106,7 +104,7 @@
     <img class="pic-home" src="https://images.unsplash.com/photo-1491438590914-bc09fcaaf77a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="home pic 2">
   </div>
 </div>
-  
+
 <div class="w-90 my-4 mx-auto" style="border: 1px solid lightgrey">
 </div>
 
