--- a/app/views/campaigns/mycampaigns.html.erb
+++ b/app/views/campaigns/mycampaigns.html.erb
@@ -2,16 +2,9 @@
 
 <div class="d-flex" id="wrapper">
   <!-- Sidebar -->
-  <div class="bg-light border-right" id="sidebar-wrapper">
-    <div class="sidebar-heading"><%= current_user.first_name%> <%= current_user.last_name%> </div>
-    <div class="list-group list-group-flush">
-      <a href="mycampaigns/owners_dashboard" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-      <a href="/mycampaigns" class="list-group-item list-group-item-action bg-light">Campaign</a>
-      <a href="/mycampaigns/support" class="list-group-item list-group-item-action bg-light">Support</a>
+  <div class="col-md-3 p-0">
+      <%= render '/shared/owner_dashboard_sidebar' %>
     </div>
-    <!-- /#closing-wrapper -->
-  </div>
-  <!-- /#closing-wrapper -->
 
   <!-- <div class="d-flex justify-content-center"> -->
 
