--- a/app/views/campaigns/owners_dashboard.html.erb
+++ b/app/views/campaigns/owners_dashboard.html.erb
@@ -1,13 +1,7 @@
 <div class="d-flex" id="wrapper">
   <!-- Sidebar -->
-  <div class="bg-light border-right" id="sidebar-wrapper">
-    <div class="sidebar-heading"><%= current_user.first_name%> <%= current_user.last_name%> </div>
-    <div class="list-group list-group-flush">
-      <a href="owners_dashboard" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-      <a href="/mycampaigns" class="list-group-item list-group-item-action bg-light">Campaign</a>
-      <a href="support" class="list-group-item list-group-item-action bg-light">Support</a>
-    </div>
-    <!-- /#sidebar-wrapper -->
+  <div class="col-md-3 p-0">
+    <%= render '/shared/owner_dashboard_sidebar' %>
   </div>
 
   <div class="d-flex justify-content-around align-items-center m-4" style="height: 150px;" id="page-content-wrapper">
