--- a/app/views/campaigns/support.html.erb
+++ b/app/views/campaigns/support.html.erb
@@ -1,13 +1,7 @@
 <div class="d-flex" id="wrapper">
 
-
-  <div class="bg-light border-right" id="sidebar-wrapper">
-    <div class="sidebar-heading"><%= current_user.first_name%> <%= current_user.last_name%> </div>
-    <div class="list-group list-group-flush">
-      <a href="owners_dashboard" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-      <a href="/mycampaigns" class="list-group-item list-group-item-action bg-light">Campaign</a>
-      <a href="support" class="list-group-item list-group-item-action bg-light">Support</a>
-    </div>
+  <div class="col-md-3 p-0">
+    <%= render '/shared/owner_dashboard_sidebar' %>
   </div>
 
   <!-- Page content -->
@@ -15,9 +9,9 @@
 
     <div class="form-wrapper" style="width: 400px; margin: 0 auto;">
 
-<div style="margin-bottom: 50px;">
-      <h1>Support</h1>
-</div>
+      <div style="margin-bottom: 50px;">
+        <h1>Support</h1>
+      </div>
 
       <%= simple_form_for :search, method: "get" do |f| %>
       <%= f.input :Available_dates, as: :string, required: false, input_html: {class: "datepicker"} %>
