--- a/app/views/campaigns/mycampaigns.html.erb
+++ b/app/views/campaigns/mycampaigns.html.erb
@@ -2,9 +2,9 @@
 
 <div class="d-flex" id="wrapper">
   <!-- Sidebar -->
-  <div class="col-md-3 p-0">
-      <%= render '/shared/owner_dashboard_sidebar' %>
-    </div>
+  <div class="col-md-2 col-lg-2 p-0">
+    <%= render '/shared/owner_dashboard_sidebar' %>
+  </div>
 
   <!-- <div class="d-flex justify-content-center"> -->
 
