--- a/app/views/investments/myinvestments.html.erb
+++ b/app/views/investments/myinvestments.html.erb
@@ -2,11 +2,11 @@
   <div class="row">
 
 
-    <div class="col-md-3 p-0">
+    <div class="col-md-2 col-lg-2 p-0">
       <%= render '/shared/investor_dashboard_sidebar' %>
     </div>
 
-    <div class="col-md-9 p-0">
+    <div class="col-md-10 col-lg-10 p-0">
 
       <!-- # Tabs -->
       <ul class="nav nav-tabs" id="myTab" role="tablist">
