--- a/app/views/investments/dashboard.html.erb
+++ b/app/views/investments/dashboard.html.erb
@@ -1,80 +1,59 @@
-<div class="container-fluid p-0">
+
   <div class="row">
 
-
-    <div class="col-md-2 col-lg-2 p-0">
+    <div class="col-sm-2">
       <%= render '/shared/investor_dashboard_sidebar' %>
     </div>
 
-    <div class="col-md-10 col-lg-10 p-0">
-
-      <!-- /#sidebar-wrapper -->
-      <!-- ---------------------------------------- -->
-      <!-- Page Content -->
+    <div class="col-sm-10">
+      <!-- KPIs BOX-->
       <div class="d-flex justify-content-around align-items-center m-4" style="height: 150px;" id="page-content-wrapper">
 
         <!-- Insert cardsinfo -->
-        <div class="card-campaign-status p-2 m-5" style="width: 150px; height:150px; background-color: #f4f4f4; border-radius: 0px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);">
-          <div class="d-flex mt-4 justify-content-around">
+        <div class="card-campaign-status kpibox m-5">
+          <div class="d-flex mt-4 justify-content-around align-items-center">
             <div class="text-center">
-              <h1>$</h1>
-              <h5><%= number_with_delimiter(@investments.where.not(payment_date: nil).sum(:amount), :delimiter => ',')%></h5>
-              <p class="text-secondary mb-2" style="font-size: 12px;">USD Invested</p>
+              <h2 class="m-3 kpidash"><%= number_with_delimiter(@investments.where.not(payment_date: nil).sum(:amount), :delimiter => ',')%></h2>
+              <h2 class="text-secondary mb-2" style="font-size: 20px;">$ Invested</h2>
             </div>
           </div>
         </div>
 
-        <div class="card-campaign-status p-2 m-5" style="width: 150px; background-color: #f4f4f4; border-radius: 0px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);">
-          <div class="d-flex mt-4 justify-content-around">
+        <div class="card-campaign-status kpibox m-5">
+          <div class="d-flex mt-4 justify-content-around align-items-center">
             <div class="text-center">
-              <h1>%</h1>
-              <h5><%= @avge_int_rate*100.round(0)%></h5>
-              <p class="text-secondary mb-2" style="font-size: 12px;">% Average Return</p>
+              <h2 class="m-3 kpidash"><%= @avge_int_rate*100.round(0)%></h2>
+              <h2 class="text-secondary mb-2" style="font-size: 20px;">% Avge Return</h2>
             </div>
           </div>
         </div>
 
-        <div class="card-campaign-status p-2 m-5" style="width: 150px; background-color: #f4f4f4; border-radius: 0px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);">
-          <div class="d-flex mt-4 justify-content-around">
+        <div class="card-campaign-status kpibox m-5">
+          <div class="d-flex mt-4 justify-content-around align-items-center">
             <div class="text-center">
-              <h1><img style="height: 45px;" src="https://img.icons8.com/carbon-copy/100/000000/restaurant.png"></h1>
-              <h5><%= @investments.where.not(payment_date: nil).count%></h5>
-              <p class="text-secondary mb-2" style="font-size: 12px;">Restaurants</p>
+              <h2 class="m-3 kpidash"><%= @investments.where.not(payment_date: nil).count%></h2>
+              <h2><img style="height: 45px;" src="https://img.icons8.com/carbon-copy/100/000000/restaurant.png"></h5>
+                <p class="text-secondary mb-2" style="font-size: 12px;"></h2>
             </div>
           </div>
-        </div>
-
-<!--     <div class="card-campaign-status p-2 m-5" style="width: 150px; background-color: #f4f4f4; border-radius: 0px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);">
-      <div class="d-flex mt-4 justify-content-around">
-        <div class="text-center">
-          <h1><img style="height: 45px;" src="https://img.icons8.com/carbon-copy/100/000000/restaurant.png"></h1>
-          <h5><%#= @investments.where(payment_date: nil).count%></h5>
-          <p class="text-secondary mb-2" style="font-size: 12px;">Pending Investment</p>
         </div>
       </div>
-    </div> -->
 
+      <div class="d-flex graph-container">
+        <div class="graph-bar">
+          <canvas data-graph="<%= JSON.generate(@graph_data_bar) %>" id="bar" ></canvas>
+        </div>
+        <div class="graph-pie">
+          <canvas data-graph="<%= JSON.generate(@graph_data_pie) %>" id="pie"></canvas>
+        </div>
+      </div>
 
-  </div>
-</div>
-<!-- Enb of Insert buttons -->
-</div>
-</div>
-<!-- /#wrapper -->
-<!-- <div class="container-fluid"> -->
-  <div class="container">
-    <div style="position:absolute; top:350px; left:300px; width:500px; height:500px;">
-      <canvas data-graph="<%= JSON.generate(@graph_data_bar) %>" id="bar" ></canvas>
     </div>
 
-    <div style="position:absolute; top:350px; right:100px; width:500px; height:500px;">
-      <canvas data-graph="<%= JSON.generate(@graph_data_pie) %>" id="pie"></canvas>
-    </div>
   </div>
-  <!--  </div> -->
 
-  <!-- /#page-content-wrapper -->
 
-</div>
-</div>
+
+<!-- Reorganize -->
+
 
