--- a/app/views/campaigns/raising.html.erb
+++ b/app/views/campaigns/raising.html.erb
@@ -47,7 +47,7 @@
             </div>
           </div>
 
-        <div class="ml-4 my-2 d-flex">
+          <div class="ml-4 my-2 d-flex">
             <i class="fas fa-seedling mr-3" style="font-size: 1.5em; color: grey"></i>
             <div class="d-flex flex-column">
               <h3>Grow your business</h3>
@@ -67,6 +67,8 @@
         </div>
       </div>
 
+      <div class="w-90 my-4 mx-auto" style="border: 1px solid lightgrey">
+      </div>
 
 
 
