added investor example into investors page

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -27,3 +27,12 @@
   background: #F3F3F3;
   padding: 16px;
 }
+
+
+
+// Your avatar for owner dashboard - investors page
+.avatar-sm-round {
+  border-radius: 50px;
+  width: 56px;
+  margin-left: 10px;
+}
