--- a/app/views/investments/dashboard.html.erb
+++ b/app/views/investments/dashboard.html.erb
@@ -1,11 +1,11 @@
 
   <div class="row">
 
-    <div class="col-sm-2">
+    <div class="col-md-2 col-lg-2 p-0">
       <%= render '/shared/investor_dashboard_sidebar' %>
     </div>
 
-    <div class="col-sm-10">
+    <div class="col-md-10 col-lg-10 p-0">
       <!-- KPIs BOX-->
       <div class="d-flex justify-content-around align-items-center m-4" style="height: 150px;" id="page-content-wrapper">
 
