--- a/app/views/investments/dashboard.html.erb
+++ b/app/views/investments/dashboard.html.erb
@@ -1,14 +1,11 @@
-
+<div class="container-fluid p-0">
   <div class="row">
-
-    <div class="col-sm-2">
+    <div class="col-2">
       <%= render '/shared/investor_dashboard_sidebar' %>
     </div>
-
-    <div class="col-sm-10">
+    <div class="col-md-10 col-lg-10 p-0">
       <!-- KPIs BOX-->
       <div class="d-flex justify-content-around align-items-center m-4" style="height: 150px;" id="page-content-wrapper">
-
         <!-- Insert cardsinfo -->
         <div class="card-campaign-status kpibox m-5">
           <div class="d-flex mt-4 justify-content-around align-items-center">
@@ -32,8 +29,8 @@
           <div class="d-flex mt-4 justify-content-around align-items-center">
             <div class="text-center">
               <h2 class="m-3 kpidash"><%= @investments.where.not(payment_date: nil).count%></h2>
-              <h2><img style="height: 45px;" src="https://img.icons8.com/carbon-copy/100/000000/restaurant.png"></h5>
-                <p class="text-secondary mb-2" style="font-size: 12px;"></h2>
+              <h2><img style="height: 45px;" src="https://img.icons8.com/carbon-copy/100/000000/restaurant.png"></h2>
+              <p class="text-secondary mb-2" style="font-size: 12px;"></p>
             </div>
           </div>
         </div>
@@ -47,13 +44,12 @@
           <canvas data-graph="<%= JSON.generate(@graph_data_pie) %>" id="pie"></canvas>
         </div>
       </div>
-
     </div>
-
   </div>
+</div>
 
 
 
-<!-- Reorganize -->
+    <!-- Reorganize -->
 
 
