--- a/app/views/investments/map.html.erb
+++ b/app/views/investments/map.html.erb
@@ -1,19 +1,14 @@
 <div class="container-fluid p-0">
   <div class="row">
-
-
-    <div class="col-md-2 col-lg-2 p-0">
+    <div class="col-2">
       <%= render '/shared/investor_dashboard_sidebar' %>
     </div>
-
     <div class="col-md-10 col-lg-10 p-0">
-
-     <h3> Your funded places map: </h3>
-     <div class="d-flex justify-content-center my-5">
-      <div id="mapbox" class="rounded" style="width: 100%; height: 60vh;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
-
+      <h3> Your funded places map: </h3>
+      <div class="d-flex justify-content-center my-5">
+        <div id="mapbox" class="rounded" style="width: 100%; height: 60vh;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+        </div>
+      </div>
     </div>
-
-
   </div>
 </div>
