--- a/app/views/investments/map.html.erb
+++ b/app/views/investments/map.html.erb
@@ -2,11 +2,11 @@
   <div class="row">
 
 
-    <div class="col-md-2 col-lg-2 p-0">
+    <div class="col-lg-2">
       <%= render '/shared/investor_dashboard_sidebar' %>
     </div>
 
-    <div class="col-md-10 col-lg-10 p-0">
+    <div class="col-lg-10 p-0">
 
      <h3> Your funded places map: </h3>
      <div class="d-flex justify-content-center my-5">
