--- a/app/views/shared/_investor_dashboard_sidebar.html.erb
+++ b/app/views/shared/_investor_dashboard_sidebar.html.erb
@@ -1,10 +1,10 @@
-<div class="bg-light border-right text-center" id="sidebar-wrapper" style="position: sticky;top: 67px;">
+<div class="bg-light border-right text-center" id="sidebar-wrapper" style="position: sticky;top: 57px;">
   <div class="sidebar-heading text-left">
     <%= current_user.first_name%> <%= current_user.last_name%>
   </div>
   <div class="list-group list-group-flush text-left">
     <% @menu.each do |item| %>
-    <a href="<%= item[:url] %>" class="list-group-item list-group-item-action <%= item[:action_name] == action_name ? "active-tab": "" %>">
+    <a href="<%= item[:url] %>" class="bg-light list-group-item list-group-item-action <%= item[:action_name] == action_name ? "active-tab": "" %>">
       <%= item[:title] %>
     </a>
     <% end %>
