--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,3 +32,15 @@
 .bg-lightgreen {
   background-color: #e8faf0;
 }
+
+.btn-success {
+  color: white;
+  background-color: #00B63A;
+  border-color: #00B63A;
+}
+
+.btn-outline-success {
+  color: #00B63A;
+  background-color: transparent;
+  border-color: #00B63A;
+}
