--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,7 @@
   justify-content: space-between;
   background: white;
   border-bottom: 1px solid lightgrey;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -16,11 +17,12 @@
 .nav-link-custom {
   color: #5D5347;
   display: block;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.5rem;
+  margin: 0.5rem 0.5rem;
   &:hover,
   &:focus {
     text-decoration: none;
-    border-bottom: 1px solid #00B63A;
+    border-bottom: 2px solid #00B63A;
     padding-bottom: 3px;
     color: #00B63A;
   }
@@ -28,4 +30,9 @@
 
 .nav-link-custom.active {
  color: #00B63A;
+ font-weight: bold;
+}
+
+.avatar-border {
+  border: 2px solid #00B63A;
 }
