--- a/app/assets/stylesheets/components/_side-menu.scss
+++ b/app/assets/stylesheets/components/_side-menu.scss
@@ -3,7 +3,7 @@ body {
 }
 
 .active-tab {
- background-color: $mid-green!important;
+ background-color: $fundeatlogo-green!important;
  font-weight: bold!important;
 }
 
