--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid p-0">
   <!-- start of row1 -->
   <%= render "carousel" %>
   <%= render "cta" %>
