--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,65 +14,69 @@
       <% if user_signed_in? && current_user.owner == false %>
 
       <li class="nav-item">
-       <%= link_to "Investing", "/campaigns", class: "nav-link-custom" %>
-     </li>
-     <li class="nav-item">
-       <%= link_to "Dashboard", "/myinvestments/dashboard", class: "nav-link-custom" %>
-     </li>
-     <% elsif user_signed_in? && current_user.owner == true %>
-     <li class="nav-item">
-      <%= link_to "Raising", "/raising", class: "nav-link-custom" %>
-    </li>
-    <li class="nav-item ">
-     <%= link_to "Dashboard", "/mycampaigns/owners_dashboard", class: "nav-link-custom" %>
-   </li>
-   <% end %>
+        <%= link_to "Investing", "/campaigns", class: "nav-link-custom #{'index' == action_name ? "active": ""}" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Dashboard", "/myinvestments/dashboard", class: "nav-link-custom #{['dashboard', 'map', 'rewards', 'myinvestments'].include?(action_name) ? "active": ""}" %>
+      </li>
+      <% elsif user_signed_in? && current_user.owner == true %>
+      <li class="nav-item">
+        <%= link_to "Raising", "/raising", class: "nav-link-custom #{'raising' == action_name ? "active": ""}" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Dashboard", "/mycampaigns/owners_dashboard", class: "nav-link-custom #{['dashboard', 'map', 'rewards', 'myinvestments'].include?(action_name) ? "active": ""}" %>
+      </li>
+      <% end %>
 
-   <% unless user_signed_in? %>
+      <% unless user_signed_in? %>
 
-   <li class="nav-item ">
-     <%= link_to "Investing", "/campaigns", class: "nav-link-custom" %>
-   </li>
+      <li class="nav-item">
+        <%= link_to "Investing", "/campaigns", class: "nav-link-custom #{'index' == action_name ? "active": ""}" %>
+      </li>
 
-   <li class="nav-item">
-    <%= link_to "Raising", "/raising", class: "nav-link-custom" %>
+      <li class="nav-item">
+        <%= link_to "Raising", "/raising", class: "nav-link-custom #{'raising' == action_name ? "active": ""}" %>
 
-  </li>
+      </li>
 
-  <li class="nav-item">
-    <%= link_to "Login", "/users/sign_in", class: "nav-link-custom" %>
-  </li>
+      <li class="nav-item">
+        <%= link_to "Login", "/users/sign_in", class: "nav-link-custom " %>
+      </li>
 
-  <li class="nav-item">
-    <%= link_to "Signup", "/users/sign_up", class: "nav-link-custom" %>
-  </li>
+      <li class="nav-item">
+        <%= link_to "Signup", "/users/sign_up", class: "nav-link-custom " %>
+      </li>
 
-  <% end %>
+      <% end %>
 
+      <div class="d-flex align-items-center p-0 m-0">
+        <li class="nav-item">
+          <% if user_signed_in? %>
+          <div><p class="my-0 mx-4"><%= current_user.first_name %></p></div>
+          <% end %>
+        </li>
 
+        <li class="nav-item dropdown mr-3">
+          <% if user_signed_in? %>
+          <% if current_user.photo.attached? %>
+          <%= cl_image_tag current_user.photo.key, class: "avatar dropdown-toggle avatar-border", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <% else %>
+          <%#= image_tag "avatar.png", class: "avatar dropdown-toggle"%>
+          <%= cl_image_tag "https://img.icons8.com/officel/40/000000/avatar.png", class: "avatar dropdown-toggle avatar-border", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
 
-  <li class="nav-item dropdown ml-3 d-flex">
-    <% if user_signed_in? %>
-    <div><p class="m-2"><%= current_user.email %></p></div>
-    <% if current_user.photo.attached? %>
-    <%= cl_image_tag current_user.photo.key,class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-    <% else %>
-    <%#= image_tag "avatar.png", class: "avatar dropdown-toggle"%>
-    <%= cl_image_tag "https://img.icons8.com/officel/40/000000/avatar.png",class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <% end %>
+          <%#= image_tag "scootercolor.svg", class: "avatar dropdown-toggle"%>
+          <% end %>
 
-    <% end %>
-    <% else %>
-    <%#= image_tag "scootercolor.svg", class: "avatar dropdown-toggle"%>
-    <% end %>
+          <div class="dropdown-menu dropdown-menu-right bg-light" aria-labelledby="navbarDropdown">
+            <%#= link_to "Profile", "#", class: "dropdown-item" %>
+            <%#= link_to "Logout", "/users/sign_out"(:authenticity_token => form_authenticity_token()), method: :delete, class: "dropdown-item" %>
 
-    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-      <%#= link_to "Profile", "#", class: "dropdown-item" %>
-      <%#= link_to "Logout", "/users/sign_out"(:authenticity_token => form_authenticity_token()), method: :delete, class: "dropdown-item" %>
+            <%= link_to 'Sign out', destroy_user_session_path(:authenticity_token => form_authenticity_token()), method: 'delete',class: "dropdown-item" %>
 
-      <%= link_to 'Sign out', destroy_user_session_path(:authenticity_token => form_authenticity_token()), method: 'delete',class: "dropdown-item" %>
-
+          </div>
+        </li>
+      </ul>
     </div>
-  </li>
-</ul>
-</div>
+  </div>
 </div>
