updated seeds and created investors view

--- a/app/views/campaigns/investors.html.erb
+++ b/app/views/campaigns/investors.html.erb
@@ -7,32 +7,39 @@
 
   <div class="col-md-10 col-lg-10 p-0">
     <div class="mt-5 container">
-      <!-- Code your tabs here -->
+
+      <!-- Tabs here -->
       <div class="tabs-all">
-        <a href="#" class="tab-one active">Investors</a>
-        <a href="#" class="tab-one">Tab 2</a>
-        <a href="#" class="tab-one">Tab 3</a>
+        <a href="#" class="tab-one active">Investors in <%= @campaign.company.name %></a>
       </div>
 
 
       <div class="notifications">
         <!-- Code one notification here -->
-        <% @campaigns.each do |campaign| %>
-        <div class="notification">
-          <div class="notification">
-            <img src="../../assets/images/avatars/nico.png" alt="" class="avatar-sm-round">
-            <div class="block-display">
-              <p class="notification-time">14 January</p>
-              <p class="notification-sentence">Nicolas liked
-                <a href="#" class="notification-link"> making a webpage.</a>
-              </p>
+        <% @campaign.investments.each do |investment| %>
+        <div class="notification p-3">
+          <div class="notification-inner">
+            <div class="d-flex align-items-center">
+              <%= image_tag investment.investor.photo, class:"avatar-sm-round" %>
+              <div class=" ml-3"><%= investment.investor.first_name %> invested
+                <span class="invested-amount"><%= number_to_currency investment.amount %></span>
+                on <%= investment.payment_date.strftime("%B %e, %Y") %>
+              </div>
             </div>
           </div>
+          <div class="reward-status h-100 align-middle d-flex align-items-center">
+            <% if investment.reward_redeemed %>
+              <i class="mr-2 fas fa-check-circle" style="font-size: 24px; color: lightgrey;"></i>
+              <% else %>
+              <i class="mr-2 fas fa-gift text-success" style="font-size: 32px;"></i>
+              <% end %>
+              <p class="m-0"><%= investment.reward.description %></p>
+            </div>
         </div>
+        <% end %>
         <!-- all notifcations closing div -->
       </div>
-      <!-- container closing di . -->
+      <!-- container closing div -->
     </div>
   </div>
-
 </div>
