--- a/app/assets/stylesheets/components/_investors.scss
+++ b/app/assets/stylesheets/components/_investors.scss
@@ -34,6 +34,13 @@
   justify-content: space-between;
 }
 
+.notification-inner {
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .notification-time {
   color: grey;
   font-weight: bold;
@@ -50,29 +57,15 @@
  /* justify-content: space-between;*/
 }
 
-/*.notification.p {
-  margin: 0px;
-}
-*/
-
-.notification-sentence {
-  margin-top: 0px;
-}
-
-.notification-status {
-  color: grey;
-  opacity: 0;
-  margin-right: 16px;
-}
-
-.notification-status:hover {
-  color: grey;
-  opacity: 1;
-}
 
 .block-display {
   display: block;
   margin-left: 16px;
 }
 
+.invested-amount {
+  color: #01B739;
+  font-weight: bold;
+  font-size: 18px;
+}
 
