--- a/app/views/campaigns/owners_dashboard.html.erb
+++ b/app/views/campaigns/owners_dashboard.html.erb
@@ -33,6 +33,15 @@
         </div>
       </div>
 
+      <div class="card-campaign-status kpibox m-5">
+        <div class="d-flex mt-4 justify-content-around align-items-center">
+          <div class="text-center">
+            <h2 class="m-3 kpidash"><%= @company.number_of_investors%></h2>
+            <h2 class="text-secondary mb-2" style="font-size: 20px;">Investors</h2>
+          </div>
+        </div>
+      </div>
+
 
       <div class="card-campaign-status kpibox m-5">
         <div class="d-flex mt-4 justify-content-around align-items-center">
