--- a/app/assets/stylesheets/components/_card-investment.scss
+++ b/app/assets/stylesheets/components/_card-investment.scss
@@ -17,7 +17,7 @@
 }
 
 .card-investment {
-  height: 500px;
+  height: 530px;
   width: 380px;
   background-color: #F3F3F3;
   border-radius: 20px;
@@ -35,7 +35,7 @@
 }
 
 .card-investment .card-pic {
-  height: 150px;
+  height: 180px;
   width: 380px;
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
@@ -49,7 +49,9 @@
 .card-investment .card-user .avatar-m-square {
   position: absolute;
   left: 15px;
-  top: 100px;
+  top: 150px;
+  // top: 80px;
+
 }
 
 .card-investment .target-bar {
