--- a/app/views/shared/_owner_dashboard_sidebar.html.erb
+++ b/app/views/shared/_owner_dashboard_sidebar.html.erb
@@ -4,9 +4,11 @@
   </div>
   <div class="list-group list-group-flush text-left">
     <% @menu.each do |item| %>
-    <a href="<%= item[:url] %>" class="list-group-item list-group-item-action <%= item[:action_name] == action_name ? "active-tab": "" %>">
+    <a href="<%= item[:url] %>" class="list-group-item list-group-item-action bg-light <%= item[:action_name] == action_name ? "active-tab": "" %>">
       <%= item[:title] %>
     </a>
     <% end %>
   </div>
 </div>
+
+<%= console %>
