changes on colors

--- a/app/assets/stylesheets/components/_badges.scss
+++ b/app/assets/stylesheets/components/_badges.scss
@@ -1,12 +1,12 @@
 .badge-open {
-    color: #212529;
-    background-color: #1EDD88;
+    color: #e9ecef;
+    background-color: $fundeatlogo-green;
     border-radius: 20px;
     padding:10px;
 }
 
 .badge-closed {
-    color: #e6e6e6;
+    color: #e9ecef;
     background-color: #393939;
     border-radius: 20px;
     padding:10px;
