--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -49,7 +49,7 @@
       <% elsif days_left = 1 %>
         <h5><span class="badge badge-open "> <%= days_left%> day left  </span></h5>
       <% else %>
-        <h5 class="pb-0"> <span class="badge badge-closed ">Investment Closed </span></h5>
+        <h5 class="pb-0"> <span class="badge badge-closed ">Funded </span></h5>
       <% end %>
       <h1 class="mt-0"><%= campaign.company.name %>
       </h1>
@@ -79,7 +79,7 @@
         <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
         </div>
         <div class="text-center">
-          <h4><%= (campaign.return_rate*100).round(1) %>%</h4>
+          <h4><%= (campaign.return_rate*100) %>%</h4>
           <p>interest</p>
         </div>
         <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
