--- a/app/assets/stylesheets/components/_mapbox.scss
+++ b/app/assets/stylesheets/components/_mapbox.scss
@@ -1,28 +1,16 @@
-// .mapboxgl-popup {
-//   max-width: 100px;
-// }
-// .mapboxgl-popup-content {
-//   text-align: center;
-//   font-family: 'Ubuntu', sans-serif;
-//   border-radius: 30px;
-//   background-color: rgba(255, 255, 255, 0.7)!important;
-// }
-// .marker {
-//   background-image: url('restaurant.png');
-//   background-size: cover;
-//   width: 100px;
-//   height: 100px;
-//   border-radius: 50%;
-//   cursor: pointer;
-// }
+.address-box-green {
+  background-color: #e8faf0;
+  border-radius: 10px;
+  border: 1px solid white;
+  color: grey;
+  padding: 0 12px;
+  z-index: 2;
+  position: absolute;
+  bottom: 53px;
+  left: 20px;
+}
 
-// .map-popup-home a {
-//   color: orange;
-// }
-
-.address-box-grey {
-  padding: 2px 15px;
-  background-color: #343a40;
-  border-radius: 50px;
-  font-size: 16px;
+#mapbox {
+  width: 100%;
+  height: 300px;
 }
