--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -38,8 +38,8 @@
 
       <!-- map  -->
       <div class="d-flex justify-content-center my-5">
-        <div id="mapbox" class="rounded" style="width: 100%; height: 300px;" data-markers="<%= @marker.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
-        <span class="address-box-green" style="z-index: 2; position: absolute; bottom: 53px; left: 20px;"><%= @company.address %></span>
+        <div id="mapbox" data-markers="<%= @marker.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+        <span class="address-box-green"><%= @company.address %></span>
       </div>
     </div>
 
