--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -29,7 +29,7 @@
         </div>
 
         <div class="text-center my-5">
-          <iframe width="100%" height="360" frameborder="0" src="https://www.youtube.com/embed/6QS17b1itIE?autoplay=1"></iframe>
+          <iframe width="100%" height="360" frameborder="0" src="https://www.youtube.com/embed/6QS17b1itIE?autoplay=1&modestbranding=1&controls=0"></iframe>
         </div>
 
         <h4><%= @campaign.company.name %></h4>
