updated vertical navbar text-color to white and add sales text to support page

--- a/app/assets/stylesheets/components/_side-menu.scss
+++ b/app/assets/stylesheets/components/_side-menu.scss
@@ -5,6 +5,7 @@ body {
 .active-tab {
  background-color: $fundeatlogo-green!important;
  font-weight: bold!important;
+ color: white;
 }
 
 #sidebar-wrapper {
