--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -1,5 +1,5 @@
 #carouselExampleInterval {
-  height: 350px;
+  // height: 350px;
   border-radius: 10px;
 }
 
@@ -8,13 +8,13 @@
 }
 
 .carousel-img {
-  max-height: 400px;
+  max-height: 350px;
   object-fit: cover;
   object-position: center;
 }
 
 #carrouselheight{
-  height:600px;
+  // height:600px;
 
 }
 
