--- a/app/views/pages/_cta.html.erb
+++ b/app/views/pages/_cta.html.erb
@@ -1,11 +1,10 @@
-<div class="row d-flex mt-0 " >
+<!-- <div class="row d-flex mt-0 " >
   <div class="col-12 home-cta d-flex justify-content-center">
     <div class="choose-option d-flex">
       <div class="d-flex flex-column w-50 justify-content-center text-center">
         <h5>Interested in Investing?</h5>
         <h5><%= link_to "Investments", "/campaigns", class: "btn btn-sm btn-success px-5" %></h5>
       </div>
-      <!-- line -->
       <div class="h-75 align-self-center" style="border: 1px solid lightgrey">
       </div>
 
@@ -15,4 +14,43 @@
       </div>
     </div>
   </div>
+</div> -->
+
+
+<div class="row d-flex mt-0 bg-light" style="top: -60px;">
+  <div class="col-12 home-cta d-flex justify-content-center">
+    <div class="choose-option d-flex align-items-center bg-white">
+<!--
+      <div class="d-flex flex-column w-50 justify-content-center text-center">
+        <h5>Interested in Investing?</h5>
+        <h5><%= link_to "Investments", "/campaigns", class: "btn btn-sm btn-success px-5" %></h5>
+      </div> -->
+
+      <div class="col-12 col-md-4 text-center border-bottom border-md-0 border-secondary kpi">
+        <h2 class="font-weight-bold "  >70k</h2>
+        <h6>Since last investment</h6>
+      </div>
+
+      <div class="h-75 align-self-center" style="border: 1px solid lightgrey"></div>
+
+      <!-- <div class="d-flex flex-column w-50 justify-content-center text-center">
+        <h5>Interested in Raising?</h5>
+        <h5><%= link_to "Raising", "#", class: "btn btn-sm btn-success px-5" %></h5>
+      </div> -->
+
+      <div class="col-12 col-md-4 text-center border-bottom border-md-0 border-secondary">
+        <h2 class="font-weight-bold">23</h2>
+        <h6>Restaurants funded</h6>
+      </div>
+
+      <div class="h-75 align-self-center" style="border: 1px solid lightgrey"></div>
+
+      <div class="col-12 col-md-4 text-center border-bottom border-md-0 border-secondary">
+        <h2 class="font-weight-bold" >681</h2>
+        <h6>investors served</h6>
+      </div>
+
+    </div>
+  </div>
 </div>
+
