Styling of dashboard and minor changes to mailer

--- a/app/assets/stylesheets/components/_campaign-status.scss
+++ b/app/assets/stylesheets/components/_campaign-status.scss
@@ -7,3 +7,10 @@
   }
 }
 
+.card-campaign-status-data {
+  background-color: #f4f4f4;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+  .bar {
+    border-radius: 50px;
+  }
+}
