--- a/app/views/campaigns/owners_dashboard.html.erb
+++ b/app/views/campaigns/owners_dashboard.html.erb
@@ -12,10 +12,8 @@
 
     <div class="d-flex justify-content-around align-items-center m-4" style="height: 150px;" id="page-content-wrapper">
 
-
-
       <!-- Insert cardsinfo -->
-      <div class="card-campaign-status kpibox m-5">
+      <div class="card-campaign-status kpibox m-4">
         <div class="d-flex mt-4 justify-content-around align-items-center">
           <div class="text-center">
             <h2 class="m-3 kpidash"><%= number_with_delimiter(@company.total_raised, :delimiter => ',')%></h2>
@@ -28,7 +26,7 @@
         <div class="d-flex mt-4 justify-content-around align-items-center">
           <div class="text-center">
             <h2 class="m-3 kpidash"><%= @company.campaign.return_rate*100.round(0)%></h2>
-            <h2 class="text-secondary mb-2" style="font-size: 20px;">% Avge Interest</h2>
+            <h2 class="text-secondary mb-2" style="font-size: 20px;">% Avg. Interest</h2>
           </div>
         </div>
       </div>
@@ -47,8 +45,8 @@
       <div class="card-campaign-status kpibox m-5">
         <div class="d-flex mt-4 justify-content-around align-items-center">
           <div class="text-center">
-            <h2 class="m-3 kpidash"><%= @company.number_of_investors%></h2>
-            <h2 class="text-secondary mb-2" style="font-size: 20px;">Investors</h2>
+            <h2 class="m-3 kpidash"><%= number_with_delimiter(@company.total_raised / @company.number_of_investors, :delimiter => ',')%></h2>
+            <h2 class="text-secondary mb-2" style="font-size: 20px;">$ Avg. Investment</h2>
           </div>
         </div>
       </div>
@@ -57,19 +55,28 @@
     </div>
 
     <!-- Graphs -->
-    <div class="d-flex graph-container justify-content-around">
-      <div class="card-campaign-status p-2 m-5" style="width: 500px; background-color: #f4f4f4; border-radius: 0px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);">
-        <canvas data-graph="<%= JSON.generate(@graph_data_bar) %>" id="bar" ></canvas>
-      </div>
+    <div class="d-flex-grow graph-container justify-content-around">
+      <div class="row">
+        <div class="col-12 col-md-6">
 
-      <div class="card-campaign-status p-2 m-5" style="width: 500px; background-color: #f4f4f4; border-radius: 0px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);">
-        <canvas data-graph="<%= JSON.generate(@graph_data_pie) %>" id="pie"></canvas>
+          <div class="card-campaign-status-data p-2 m-5">
+            <canvas data-graph="<%= JSON.generate(@graph_data_bar) %>" id="bar" ></canvas>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6">
+          <div class="card-campaign-status-data p-2 m-5">
+            <canvas data-graph="<%= JSON.generate(@graph_data_pie) %>" id="pie"></canvas>
+          </div>
+        </div>
+
       </div>
     </div>
 
+
     <!-- My campaigns -->
     <div class="container">
-      <div class="w-100 mt-5" style="background-color: lightgrey; height: 2px;">
+      <div class="w-100 mt-3" style="background-color: lightgrey; height: 2px;">
       </div>
     </div>
 
