--- a/app/views/support_mailer/appointment.html.erb
+++ b/app/views/support_mailer/appointment.html.erb
@@ -6,8 +6,7 @@
 <hr>
 <br>
 
-<p>Hi <%= @name %>,</p>
-
+<strong>From:</strong> <p> <%= @name %></p>
 <strong>Email:</strong> <p> <%= @email %></p>
 <strong>Message:</strong> <p> <%= @message %></p>
 <strong>Date:</strong> <p> <%= @date %></p>
