--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -34,3 +34,16 @@
   width: 56px;
   margin-left: 10px;
 }
+
+
+.cardinv-avatar{
+  width: 45px;
+  height: 45px;
+
+  border-radius: 22.5px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: 1px solid grey;
+  background: #F3F3F3;
+  padding: 2px;
+
+}
